--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meu Portfólio</title>
+    <title>Rafael S. | Portfólio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
@@ -54,7 +54,9 @@
 
       <div class="section" id="skills-section">
         <div class="section-header" onclick="toggleSection('skills-section')">
-          <h2 class="section-title">Habilidades</h2>
+          <h2 class="section-title">
+            <i class="bi bi-lightbulb"></i> Habilidades
+          </h2>
           <span class="arrow">▼</span>
         </div>
         <div class="section-content">
@@ -69,7 +71,7 @@
           class="section-header"
           onclick="toggleSection('languages-section')"
         >
-          <h2 class="section-title">Idiomas</h2>
+          <h2 class="section-title"><i class="bi bi-translate"></i> Idiomas</h2>
           <span class="arrow">▼</span>
         </div>
         <div class="section-content">
@@ -81,7 +83,7 @@
 
       <div class="section" id="projects-section">
         <div class="section-header" onclick="toggleSection('projects-section')">
-          <h2 class="section-title">Projetos</h2>
+          <h2 class="section-title"><i class="bi bi-folder"></i> Projetos</h2>
           <span class="arrow">▼</span>
         </div>
         <div class="section-content">
@@ -96,7 +98,9 @@
           class="section-header"
           onclick="toggleSection('certificates-section')"
         >
-          <h2 class="section-title">Certificados</h2>
+          <h2 class="section-title">
+            <i class="bi bi-award"></i> Certificados
+          </h2>
           <span class="arrow">▼</span>
         </div>
         <div class="section-content">
@@ -111,7 +115,9 @@
           class="section-header"
           onclick="toggleSection('experience-section')"
         >
-          <h2 class="section-title">Experiência</h2>
+          <h2 class="section-title">
+            <i class="bi bi-briefcase"></i> Experiência
+          </h2>
           <span class="arrow">▼</span>
         </div>
         <div class="section-content">
