feat: novo projeto

--- a/index.html
+++ b/index.html
@@ -3,7 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rafael S. | Portfólio</title>
+
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" />
+    <meta name="referrer" content="strict-origin-when-cross-origin" />
+
+    <!-- SEO Meta Tags -->
+    <title>Rafael S. - Desenvolvedor Frontend | Portfólio Profissional</title>
+    <meta
+      name="description"
+      content="Portfólio profissional de Rafael S. - Desenvolvedor Frontend especializado em criar soluções digitais inovadoras. Confira meus projetos, habilidades e experiência."
+    />
+    <meta
+      name="keywords"
+      content="desenvolvedor, desenvolvedor web, portfólio, programador, front-end, projetos web, dev, developer, web developer, web designer, desenvolvedor frontend, rafael soares mota, rafael roares, rafael"
+    />
+    <meta name="author" content="Rafael S." />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="Portuguese" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://portfolio-fael.vercel.app/" />
+    <meta
+      property="og:title"
+      content="Rafael S. - Desenvolvedor Frontend | Portfólio Profissional"
+    />
+    <meta
+      property="og:description"
+      content="Portfólio profissional de Rafael S. - Desenvolvedor Frontend especializado em criar soluções digitais inovadoras."
+    />
+
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="assets/favicon/favicon-16x16.png"
+    />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
